fix: buttons cta hero on mobile gap

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1961,6 +1961,7 @@
         font-size: (13/16rem);
         min-width: 7rem;
         padding: 0 (6/16rem);
+        gap: clamp(0rem, 0.5vw, 0.5rem);
 
         .cs-image {
           width: (14/16rem);
